enumerate paths and dubins!

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -53,6 +53,7 @@ add_library(${PROJECT_NAME}
   src/selector/ForwardSelector.cpp
   src/io/MotionPrimitiveReader.cpp
   examples/rsmotion.cpp
+  examples/dubins.cpp
 )
 
 #================================================================================
