--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -97,6 +97,10 @@ add_executable(rc_lattice examples/rc_lattice.cpp)
 target_link_libraries(rc_lattice ${PROJECT_NAME} ${OpenCV_LIBS})
 install(TARGETS rc_lattice RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
 
+add_executable(reconfigure examples/reconfigure.cpp)
+target_link_libraries(reconfigure ${PROJECT_NAME} ${OpenCV_LIBS})
+install(TARGETS reconfigure RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION})
+
 #================================================================================
 # Installation
 #================================================================================
